Complete project restoration from backup - Frontend and Backend fully restored and working